<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/col4"
    android:orientation="vertical"
    tools:context=".Rechner">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/anzeige"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/col3"
            android:padding="5dp"
            android:textColor="@android:color/background_light"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/eingabe"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:text=""
            android:visibility="visible"
            tools:textSize="12sp" />

        <!-- Taschenrechner Tastatur -->

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="90dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="90dp"
            android:columnCount="4"
            android:rowCount="4">

            <!-- Erste Reihe Taschenrechner -->
            <Button
                android:id="@+id/b1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:background="@color/col3"
                android:onClick="press1"
                android:text="@string/r1"
                android:textColor="@color/calc4"
                android:textSize="24sp" />

            <Button
                android:id="@+id/b2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:background="@color/col3"
                android:onClick="press2"
                android:text="@string/r2"
                android:textColor="@color/calc4"
                android:textSize="24sp" />

            <Button
                android:id="@+id/b3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:layout_column="2"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:background="@color/col3"
                android:onClick="press3"
                android:text="@string/r3"
                android:textColor="@color/calc4"
                android:textSize="24sp" />

            <Button
                android:id="@+id/bPlus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:layout_column="3"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:background="@color/col1"
                android:onClick="pressPlus"
                android:text="@string/r4"
                android:textColor="@color/calc4"
                android:textSize="24sp" />

            <!-- Zweite Reihe Taschenrechner -->

            <Button
                android:id="@+id/b4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_rowWeight="1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:background="@color/col3"
                android:onClick="press4"
                android:text="@string/r5"
                android:textColor="@color/calc4"
                android:textSize="24sp" />

            <Button
                android:id="@+id/b5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_rowWeight="1"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:background="@color/col3"
                android:onClick="press5"
                android:text="@string/r6"
                android:textColor="@color/calc4"
                android:textSize="24sp" />

            <Button
                android:id="@+id/b6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_rowWeight="1"
                android:layout_column="2"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:background="@color/col3"
                android:onClick="press6"
                android:text="@string/r7"
                android:textColor="@color/calc4"
                android:textSize="24sp" />

            <Button
                android:id="@+id/bMinus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_rowWeight="1"
                android:layout_column="3"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:background="@color/col1"
                android:onClick="pressMinus"
                android:text="@string/r8"
                android:textColor="@color/calc4"
                android:textSize="24sp" />

            <!-- Dritte Reihe Taschenrechner -->

            <Button
                android:id="@+id/b7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_rowWeight="1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:background="@color/col3"
                android:onClick="press7"
                android:text="@string/r9"
                android:textColor="@color/calc4"
                android:textSize="24sp" />

            <Button
                android:id="@+id/b8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_rowWeight="1"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:background="@color/col3"
                android:onClick="press8"
                android:text="@string/r10"
                android:textColor="@color/calc4"
                android:textSize="24sp" />

            <Button
                android:id="@+id/b9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_rowWeight="1"
                android:layout_column="2"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:background="@color/col3"
                android:onClick="press9"
                android:text="@string/r11"
                android:textColor="@color/calc4"
                android:textSize="24sp" />

            <Button
                android:id="@+id/bMal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_rowWeight="1"
                android:layout_column="3"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:background="@color/col1"
                android:onClick="pressMal"
                android:text="@string/r12"
                android:textColor="@color/calc4"
                android:textSize="24sp" />

            <!-- Vierte Reihe Taschenrechner -->

            <Button
                android:id="@+id/bKomma"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="3"
                android:layout_rowWeight="1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:background="@color/col2"
                android:onClick="pressKomma"
                android:text="@string/r13"
                android:textColor="@color/calc4"
                android:textSize="24sp" />

            <Button
                android:id="@+id/b0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="3"
                android:layout_rowWeight="1"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:background="@color/col3"
                android:onClick="press0"
                android:text="@string/r14"
                android:textColor="@color/calc4"
                android:textSize="24sp" />

            <Button
                android:id="@+id/bGleich"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="3"
                android:layout_rowWeight="1"
                android:layout_column="2"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:background="@color/col2"
                android:onClick="pressGleich"
                android:text="@string/r15"
                android:textColor="@color/calc4"
                android:textSize="24sp" />

            <Button
                android:id="@+id/bGeteilt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="3"
                android:layout_rowWeight="1"
                android:layout_column="3"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:background="@color/col1"
                android:onClick="pressGeteilt"
                android:text="@string/r16"
                android:textColor="@color/calc4"
                android:textSize="24sp" />

        </GridLayout>

    </LinearLayout>

</RelativeLayout>